# pac2021final-2

./: .gitignore  .gitmodules  CMakeLists.txt
data/: profile-run.sh  run-small.sh  run.sh
src/: barcodeListMerge.cpp  barcodePositionConfig.cpp  barcodePositionConfig.h  barcodePositionMap.cpp  barcodePositionMap.h  barcodeProcessor.cpp  barcodeProcessor.h  barcodeToPositionMulti.cpp  barcodeToPositionMulti.h  barcodeToPositionMultiPE.cpp  barcodeToPositionMultiPE.h  chipMaskHDF5.cpp  chipMaskHDF5.h  chipMaskMerge.cpp  chipMaskMerge.h  fastqreader.cpp  fastqreader.h  fixedfilter.cpp  fixedfilter.h  htmlreporter.cpp  isal_reader.cpp  isal_reader.h  isal_wirter.cpp  isal_wirter.h  isal_writer.cpp  main.cpp  options.cpp  options.h  read.cpp  read.h  result.cpp  result.h  ringbuf.hpp  ringbuf_pair.cpp  ringbuf_pair.h  sequence.cpp  sequence.h  util.h  writer.cpp  writer.h  (+2 more)
